2006-04-10 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	* SharedLibraryManager.java
	* GDBCDIDebugger2.java
	* IMILaunchConfigurationConstants.java
	* MICoreUtils.java

2006-04-10 Mikhail Khodjaiants
	"set solib-search-path" and "show solib-search-path" are not supported on Windows.
	* StandardWinCommandFactory.java

2006-04-03 Mikhail Khodjaiants
	Bug 134617: The "stop on shared library event" option doesn't work.
	* GDBCDIDebugger2.java

2006-03-31 Mikhail Khodjaiants
	Corrected position of the "try-catch-finally" clause in createSession.
	* AbstractGDBCDIDebugger.java

2006-03-31 Mikhail Khodjaiants
	Throw OperationCanceledException instead of IOException when getGDBprocess is canceled.
	* MIProcessAdapter.java

2006-03-27 Mikhail Khodjaiants
	Cleaned up the "Session" class constructors.
	* Session.java
 
2006-03-27 Mikhail Khodjaiants
	Added the "getSessionConfiguration" method to allow clients to provide their own session configurations.
	* AbstractGDBCDIDebugger.java

2006-03-23 Mikhail Khodjaiants
	Pass ILaunch instead of ILaunchConfiguration.
	Added "getGDBPath" method.
	* AbstractGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* GDBCDIDebugger2.java
	* GDBServerCDIDebugger2.java

2006-03-23 Mikhail Khodjaiants
	Added default attribute value for ATTR_DEBUG_NAME.
	* IMILaunchConfigurationConstants.java

2006-03-21 Mikhail Khodjaiants
	Missing error message.
	* MIPluginResources.properties

2006-03-20 Mikhail Khodjaiants
	Made "getCommandFile" and "getWorkingDirectory" methods protected.
	* GDBCDIDebugger2.java
	
2006-03-16 Mikhail Khodjaiants
	ILaunch is added to the arguments list of "doStartSession".
	* AbstractGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* GDBCDIDebugger2.java
 
2006-03-13 Mikhail Khodjaiants
	Added default implementation for "getExtraArguments". No need to force 
	clients to implement this method.
	* AbstractGDBCDIDebugger.java
